--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^0.27.2",
+    "firebase": "^9.9.3",
     "firebase-admin": "^11.0.1",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "geolib": "^3.3.3",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
