--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "firebase-admin": "^11.0.1",
-    "firebase-functions": "^3.22.0"
+    "firebase-functions": "^3.22.0",
+    "lodash": "^4.17.21"
   }
 }
